🐛 nav: Fix deformed button on mobile Firefox view by changing button padding from fixed (rem) to relative (%)

--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -13,7 +13,7 @@ nav {
     border: none;
     border: 2px solid $fg_color;
     border-radius: 10px;
-    padding: 0.5rem;
+    padding: 2%;
     position: relative;
     transition: all 0.5s ease;
     cursor: pointer;
